@@ -255,13 +255,18 @@ if ($TYPO3_CONF_VARS['BE']['adminOnly'] < 0)	{
 	exit;	// ... and exit good!
 }
 if (!(defined('TYPO3_cliMode') && TYPO3_cliMode) && @is_file(PATH_typo3conf.'LOCK_BACKEND'))	{
-	$fContent = t3lib_div::getUrl(PATH_typo3conf.'LOCK_BACKEND');
-	if ($fContent)	{
-		header('Location: '.$fContent);	// Redirect
+	if (TYPO3_PROCEED_IF_NO_USER == 2) {
+		// ajax poll for login, let him pass
 	} else {
-		die('Browser backend is locked for maintenance. Remove lock by removing the file "typo3conf/LOCK_BACKEND" or use CLI-scripts.'.chr(10).chr(10));
+		$fContent = t3lib_div::getUrl(PATH_typo3conf.'LOCK_BACKEND');
+		if ($fContent)	{
+			header('Location: '.$fContent);	// Redirect
+		} else {
+			die('Browser backend is locked for maintenance. Remove lock by removing the file "typo3conf/LOCK_BACKEND" or use CLI-scripts.'.chr(10).chr(10));
+		}
+		exit;  
 	}
-	exit;
+	
 }
 
 // **********************
